@@ -5,7 +5,8 @@ import matplotlib
 __all__ = ['backend','show','draw_if_interactive','error_msg',
            'new_figure_manager', 'backend_version']
 
-interactive_bk     = ['GTK','GTKAgg','GTKCairo','FltkAgg','TkAgg','WX','WXAgg',]
+interactive_bk     = ['GTK','GTKAgg','GTKCairo','FltkAgg','QtAgg', 'TkAgg',
+                      'WX','WXAgg',]
 non_interactive_bk = ['Agg','Cairo','GD','GDK','Paint','PS','SVG','Template']
 all_backends       = interactive_bk + non_interactive_bk
 
